# API_Sports_Ingestion

./: .env.example  README.md  docker-compose.yml  pyproject.toml
scripts/: init_db.py  link_team.py  verify_extra_endpoints_e2e.py  verify_football_e2e.py
src/sport_ingestion/: identity.py
src/sport_ingestion/db/: session.py
src/sport_ingestion/ingestors/: __init__.py  base.py  coachs.py  fixtures.py  head_to_head.py  injuries.py  leagues.py  lineups.py  match_events.py  match_player_ratings.py  match_statistics.py  odds.py  player_imports.py  player_squads.py  predictions.py  standings.py  team_statistics.py  teams.py  topscorers.py  transfers.py  venues.py
src/sport_ingestion/models/: __init__.py  coach.py  fixture.py  injury.py  league.py  lineup.py  match_event.py  match_player_rating.py  match_statistic.py  odd.py  player_import.py  player_squad.py  prediction.py  standing.py  team.py  team_identity_map.py  team_statistic.py  topscorer.py  transfer.py  venue.py
tests/: conftest.py
tests/integration/: conftest.py  test_team_identity_map.py  test_upsert_idempotency.py
tests/unit/: test_base_ingestor.py  test_fixture_ingestor.py  test_head_to_head.py  test_injuries.py  test_league_ingestor.py  test_match_detail.py  test_odds.py  test_player_imports.py  test_predictions.py  test_referentiel_extra.py  test_standing_ingestor.py  test_team_identity_wiring.py  test_team_ingestor.py  test_team_statistics.py  test_topscorers.py  test_transfers.py
tests/unit/fixtures/: basketball_games_response.json  basketball_standings_response.json  fixtures_response.json  (+3 more)
