[project]
name = "sport-ingestion"
version = "0.1.0"
description = "Constructeurs d'injection BDD : fetch API-Sports (via api_sports) -> upsert PostgreSQL."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.1",
    "api-sports-client",
]

[tool.uv.sources]
api-sports-client = { path = "../Sport_API", editable = true }

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
markers = ["integration: necessite un vrai Postgres (TEST_DATABASE_URL)"]
addopts = "-m 'not integration'"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sport_ingestion"]
